--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ diff-match-patch==20200713
 dj-config-url==0.1.1
 dj-database-url==0.5.0
 Django==3.1.6
-django-crispy-forms==1.11.1
+django-crispy-forms=="*"
 django-heroku==0.3.1
 django-import-export==2.5.0
 django-rest-auth==0.9.5
