--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ defusedxml==0.6.0
 diff-match-patch==20200713
 dj-config-url==0.1.1
 dj-database-url==0.5.0
+dj-static==0.0.6
 Django==3.1.6
 django-crispy-forms==1.7.2
 django-heroku==0.3.1
@@ -51,6 +52,7 @@ simplejson==3.17.2
 six==1.15.0
 SQLAlchemy==1.3.23
 sqlparse==0.4.1
+static3==0.7.0
 tablib==3.0.0
 uritemplate==3.0.1
 urllib3==1.26.3
