--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,8 @@ defusedxml==0.6.0
 diff-match-patch==20200713
 dj-config-url==0.1.1
 dj-database-url==0.5.0
-dj-static==0.0.6
 Django==3.1.6
-django-crispy-forms==1.11.1
+django-allauth==0.44.0
 django-heroku==0.3.1
 django-import-export==2.5.0
 django-rest-auth==0.9.5
@@ -36,23 +35,26 @@ jdcal==1.4.1
 Jinja2==2.11.3
 MarkupPy==1.14
 MarkupSafe==1.1.1
+oauthlib==3.1.0
 odfpy==1.4.1
 openapi-codec==1.3.2
 openpyxl==3.0.6
 Pillow==8.1.0
 psycopg2==2.8.6
 pycparser==2.20
+PyJWT==2.0.1
 PyPDF2==1.26.0
 python-bidi==0.4.2
+python3-openid==3.2.0
 pytz==2021.1
 PyYAML==5.4.1
 reportlab==3.5.64
 requests==2.25.1
+requests-oauthlib==1.3.0
 simplejson==3.17.2
 six==1.15.0
 SQLAlchemy==1.3.23
 sqlparse==0.4.1
-static3==0.7.0
 tablib==3.0.0
 uritemplate==3.0.1
 urllib3==1.26.3
